Dark mode FTW. Fixed minor cosmetic things

--- a/frontEnd/src/cardGame/CardGame.css
+++ b/frontEnd/src/cardGame/CardGame.css
@@ -11,17 +11,18 @@
 
 .cardgame button {
   background: none;
-  border: 2px solid #1b1523ab;
+  margin: 30px  0px 10px 0px;
+  border: 2px solid #bec9d4;
   padding: 6px 12px;
-  border-radius: 4px;
-  color: #1b1523;
+  border-radius: 5px;
+  color: #bec9d4;
   font-weight: bold;
   cursor: pointer;
   font-size: 1em;
 }
 
 .cardgame button:hover {
-  background: #c23866;
+  background: #539bf5;
   color: #fff;
 }
 
@@ -31,4 +32,8 @@
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
   grid-gap: 10px;  
   /* grid-row-gap: 5px; */
+}
+
+.cardgame h2 {
+  margin: 25px;
 }
